--- a/locationFinder/Info.plist
+++ b/locationFinder/Info.plist
@@ -21,5 +21,9 @@
 			</array>
 		</dict>
 	</dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This app uses your location to ....</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>This app uses your location to ....</string>
 </dict>
 </plist>
